<resources>
    <string name="app_name">DroidTools</string>
    <string name="loginTxt">Login</string>
    <string name="signupTxt">Signup</string>
    <string name="todo">TODO</string>
    <string name="usernameTxt">user name</string>
    <string name="passwordTxt">password</string>
    <string name="not_yet_registered_signup_nowTxt">Not yet registered signup now</string>
    <string name="select_menu">SELECT MENU</string>
    <string name="text_to_pdf">Text to Pdf</string>
    <string name="document_scanner">Document Scanner</string>
    <string name="folder_open">Open Database</string>
    <string name="take_pics">Take pics</string>
    <string name="image_editor">Image Editor</string>
    <string name="quick_note">Quick Note</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="phone_number">phone number</string>
    <string name="e_mail">email</string>
    <string name="confirm_password">confirm Password</string>
    <string name="droidtools">Droid Tools</string>
    <string name="title">note title</string>
    <string name="desc">note description</string>
    <string name="save_text">SAVE TEXT</string>
    <string name="save_file">Save file</string>
    <string name="share_file">Share File</string>
    <string name="rate_us">Rate us</string>
    <string name="title_activity_navbar">Navbar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="applications">Applications</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="floatBtn">Add Note</string>
    <string name="update_txt">Update</string>
    <string name="delete_txt">Delete</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="convert">Convert</string>
    <string name="image_to_pdf">Image To PDF</string>
    <string name="convert_to_pdf">Convert To Pdf</string>
    <string name="extract_text_will_display">Extract text will display</string>
    <string name="change_profile">Change Profile Details</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="enter_content">Enter Content</string>
    <string name="genarate_pdf">Genarate PDF</string>
    <string name="pdf_to_text">PDF to Text</string>
    <string name="add_file_to_server">Add File to Server</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="image">Image</string>
    <string name="change">Change</string>

    <string name="gettingstart">Grow your business with Zomo.</string>
    <string name="gettingsubtext">An international text agency with some of the industrys sharpest and most creative writers stand ready to create the texts you need.</string>
    <string name="image_to_text">Image To Text</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="quick_cv_maker">Quick CV maker</string>
    <string name="cv_det">Make a free profesional cv for emargancy purpose.</string>
    <string name="convert_desc">Convert your image in any format.</string>
    <string name="image_converter">Image Converter</string>
    <string name="voice_desc">Extract voice from any video.</string>
    <string name="voice_extractor">Voice Extractor</string>
    <string name="future_updates">Future Updates</string>
    <string name="opendb">Open database to access saved files..</string>
    <string name="open_database">Open Database</string>
    <string name="pdftotxt">Convert a PDF file to text file.</string>
    <string name="qnote">Make a quick note in the time of emargency.</string>
    <string name="quick_notes">Quick Notes</string>
    <string name="txttopdf">Convert a text to pdf file.</string>
    <string name="home_page">Home Page</string>
    <string name="image_to_ntext">Image To\nText</string>
    <string name="txttoimg">Extract text from image tool.</string>
    <string name="save_to_database">Save to Database</string>
    <string name="updtodbs">Upload local file on database to access always.</string>
    <string name="display">Extract text will display</string>
    <string name="device_select">Select file from device</string>
    <string name="exp_lic">Your Licence is Expire</string>
    <string name="new_lic">Ask For New license</string>
    <string name="permanent">Get Permanent Version</string>
    <string name="getkey">9832961542 ask new key</string>

</resources>