<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndSignUp.LoginPage">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/top_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal" />


    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="36dp"
        android:text="@string/app_name"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="20dp"
        app:cardElevation="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:id="@+id/LginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginTxt"
                android:textAlignment="center"
                android:textColor="#448AFF"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mailid"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/mail_logo"
                android:drawablePadding="8dp"
                android:hint="@string/e_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="#5C6BC0"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/password"
                android:drawablePadding="8dp"
                android:hint="@string/passwordTxt"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="#5C6BC0"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                android:text="@string/loginTxt"
                android:textColor="#263238"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/not_yet_registered_signup_nowTxt"
            android:textAlignment="center"
            android:textColor="#5C6BC0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/forgotpass"
            android:textAlignment="center"
            android:textColor="#5C6BC0"
            android:textSize="14sp" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>