<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/top_background"
    tools:context=".ForgotPasswordTools.ForgotPassword">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        android:elevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">


            <TextView
                android:id="@+id/LginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgotpass"
                android:textAlignment="center"
                android:textColor="#448AFF"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/gmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/mail_logo"
                android:drawablePadding="8dp"
                android:hint="@string/e_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="#5C6BC0"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />


            <Button
                android:id="@+id/forgotbtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                android:text="@string/submit"
                android:textColor="#263238"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />
        </LinearLayout>




    </androidx.cardview.widget.CardView>


</LinearLayout>