<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back_ground"
    tools:context=".UserDashboard.UserDashBoardSettings"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_background"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            android:elevation="20dp"

            android:background="@drawable/custom_edittext">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:padding="24dp">

                    <TextView
                        android:id="@+id/LginText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_edit"
                        android:textAlignment="center"
                        android:textColor="#448AFF"
                        android:textSize="36sp"
                        android:textStyle="bold" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/displaypic"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/avatar"
                        app:civ_border_width="1dp" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/camerBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="180dp"
                        android:layout_marginTop="-50dp"
                        android:backgroundTint="@color/darkblue"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/camera" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/user"
                        android:drawablePadding="8dp"
                        android:hint="@string/usernameTxt"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:textColorHint="#5C6BC0"
                        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />


                    <EditText
                        android:id="@+id/phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="40dp"
                        android:autofillHints=""
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/phone"
                        android:drawablePadding="8dp"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:textColorHint="#5C6BC0"
                        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

                    <Button
                        android:id="@+id/changedetails"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="30dp"
                        android:backgroundTint="@color/purple"
                        android:text="@string/change"
                        android:textColor="#263238"
                        android:textSize="18sp"
                        app:cornerRadius="20dp"
                        tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />


                </LinearLayout>

            </ScrollView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/forgotpass"
            android:textAlignment="center"
            android:textColor="#5C6BC0"
            android:textSize="14sp" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menubar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navbarmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/main_menu"
            tools:ignore="VisualLintBottomNav" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</RelativeLayout>